--- a/Compilador/assets/css/style.css
+++ b/Compilador/assets/css/style.css
@@ -34,3 +34,11 @@ body {
   h1 {
     font-size: 1.5rem;
   }
+
+  .scroll-box {
+    overflow-y: scroll;
+    width: 200px;
+    height: 200px;
+    margin-top: 15px;
+    background-color: antiquewhite;
+  }
